[gd_scene load_steps=10 format=3 uid="uid://c61xn2acved5o"]

[ext_resource type="Script" path="res://scenes/scripts/enemybullet.gd" id="1_r2qpm"]
[ext_resource type="Texture2D" uid="uid://cpl0c1xjetjc8" path="res://data/enemy/enemy.png" id="2_173b5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y28v8"]
atlas = ExtResource("2_173b5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcvxu"]
atlas = ExtResource("2_173b5")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwjmb"]
atlas = ExtResource("2_173b5")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mogbe"]
atlas = ExtResource("2_173b5")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hwwhu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y28v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcvxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwjmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mogbe")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ek65a"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2gxfi"]
size = Vector2(14, 16)

[node name="EnemyBullet" type="CharacterBody2D"]
position = Vector2(-16, -18)
scale = Vector2(1.30319, 1.31304)
collision_layer = 16
script = ExtResource("1_r2qpm")

[node name="EnemyBulletSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(12.3914, 13.1549)
scale = Vector2(2.84375, 2.84375)
sprite_frames = SubResource("SpriteFrames_hwwhu")
animation = &"idle"
autoplay = "idle"
frame = 1
frame_progress = 0.160307

[node name="BulletCollision" type="CollisionShape2D" parent="."]
position = Vector2(12.3914, 13.5934)
shape = SubResource("RectangleShape2D_ek65a")

[node name="BulletSignal" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 3

[node name="SignalCollider" type="CollisionShape2D" parent="BulletSignal"]
position = Vector2(12.3914, 13.5934)
shape = SubResource("RectangleShape2D_2gxfi")

[node name="VisibleNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(12.3914, 13.5934)
scale = Vector2(0.7, 0.7)

[connection signal="body_entered" from="BulletSignal" to="." method="_on_bullet_signal_body_entered"]
[connection signal="screen_exited" from="VisibleNotifier" to="." method="_on_visible_notifier_screen_exited"]
